# DUT-2025-TOSS

./: .gitignore  Cargo.toml  LICENSE  PROXY_CONFIG.md  README.md
HW-Riddler/: Cargo.toml  PROJECT_COMPLETION_REPORT.md  QUICK_START_GUIDE.md  README.md  commands.txt  presentation.md  test_demo.sh
HW-Riddler/demo/: performance_report.json
HW-Riddler/src/: cli.rs  config.rs  cookie_manager.rs  http_client.rs  logger.rs  main.rs  network.rs  performance_analyzer.rs
lab 5-WebServer/: Cargo.toml  README.md  benchmark.sh  lab5.md
lab 5-WebServer/src/: async_tokio.rs  main.rs  multi_threaded.rs  single_threaded.rs
lab4-chatbot/src/: cli.rs  database.rs  embeddings.rs  llm.rs  main.rs  proxy_config.rs
src/: cli.rs  database.rs  main.rs
